# hyperlight

./: .editorconfig  .gitignore  .gitmodules  .rustc_info.json  Cargo.toml  INTEROP.md  Justfile  README.md  SECURITY.md  c.just  hyperlight.sln  rust-toolchain.toml  setup_linux.sh  typos.toml
src/HyperlightGuest/: Cargo.toml  HyperlightGuest.vcxproj  HyperlightGuest.vcxproj.filters
src/HyperlightGuest/include/: hyperlight.h  hyperlight_error.h  hyperlight_guest.h  hyperlight_peb.h
src/HyperlightGuest/src/: HyperlightGuest.c  lib.rs
src/HyperlightGuest/src/asm/: __chkstk.asm  __halt.asm  __security_cookie.asm  jmp.asm  outb.asm  regaccess.asm
src/hyperlight_capi/: Cargo.toml  Justfile  build.rs  cbindgen.toml
src/hyperlight_capi/scripts/: test-command.bat  test-command.sh  valgrind-command.sh
src/hyperlight_capi/src/: bool.rs  byte_array.rs  c_func.rs  config.rs  context.rs  err.rs  exports.rs  filepath.rs  function_call_result.rs  guest_error.rs  guest_interface_glue.rs  guest_log_data.rs  handle.rs  handle_status.rs  hdl.rs  host_function_call.rs  hyperv_linux.rs  int.rs  kvm.rs  lib.rs  mem_access_handler.rs  mem_cfg.rs  mem_layout.rs  mem_mgr.rs  outb_handler.rs  sandbox.rs  sandbox_compat.rs  sandbox_run_options.rs  shared_mem.rs  shared_mem_snapshot.rs  strings.rs  uint.rs
src/hyperlight_capi/src/arrays/: borrowed_slice.rs  mod.rs  raw_vec.rs
src/hyperlight_capi/tests_capi/: README.md  byte_array_tests.c  byte_array_tests.h  context_tests.c  context_tests.h  err.c  err.h  flag.c  flag.h  hypervisor.c  hypervisor.h  int.c  int.h  main.c  mem.h  mem_access_handler.c  mem_access_handler.h  outb_handler.c  outb_handler.h  sandbox_tests.c  sandbox_tests.h  uint.c  uint.h
src/hyperlight_capi/valgrind_suppressions/: hyperv_linux.supp  minimal.supp  prometheus.supp
src/hyperlight_common/: Cargo.toml
src/hyperlight_common/src/: lib.rs  resource.rs
src/hyperlight_common/src/flatbuffer_wrappers/: function_call.rs  function_types.rs  guest_error.rs  guest_function_definition.rs  guest_function_details.rs  guest_log_data.rs  guest_log_level.rs  host_function_definition.rs  host_function_details.rs  mod.rs
src/hyperlight_common/src/flatbuffers/: mod.rs
src/hyperlight_common/src/mem/: mod.rs
src/hyperlight_flatbuffers/: Cargo.toml
src/hyperlight_flatbuffers/src/: lib.rs
src/hyperlight_flatbuffers/src/flatbuffer_wrappers/: function_call.rs  function_types.rs  guest_error.rs  guest_function_definition.rs  guest_function_details.rs  guest_log_data.rs  guest_log_level.rs  host_function_definition.rs  host_function_details.rs  mod.rs
src/hyperlight_guest/: Cargo.toml  build.rs
src/hyperlight_guest/include/: setjmp.h
src/hyperlight_guest/src/: alloca.rs  chkstk.rs  entrypoint.rs  error.rs  flatbuffer_utils.rs  function.rs  guest.rs  guest_error.rs  guest_function_call.rs  guest_function_definition.rs  guest_function_register.rs  guest_functions.rs  guest_logger.rs  host_error.rs  host_function_call.rs  host_functions.rs  hyperlight_peb.rs  lib.rs  logging.rs  memory.rs  print.rs  security_check.rs  setjmp.rs  shared_input_data.rs  shared_output_data.rs
src/hyperlight_guest/src/alloca/: alloca.c
src/hyperlight_host/: .gitignore  Cargo.toml  Justfile  build.rs  cbindgen.toml  minimal.supp
src/hyperlight_host/benches/: benchmarks.rs
src/hyperlight_host/examples/chrome-tracing/: main.rs
src/hyperlight_host/examples/func_ctx/: main.rs
src/hyperlight_host/examples/hello-world/: main.rs
src/hyperlight_host/examples/logging/: main.rs
src/hyperlight_host/examples/metrics/: main.rs
src/hyperlight_host/examples/otlp_tracing/: main.rs
src/hyperlight_host/examples/tracing/: main.rs
src/hyperlight_host/fuzz/: Cargo.toml  README.md
src/hyperlight_host/fuzz/fuzz_targets/: fuzz_target_1.rs
src/hyperlight_host/scripts/: parse_valgrind_suppressions.sh  test-command.bat  test-command.sh  valgrind-command.sh
src/hyperlight_host/src/: error.rs  functions.rs  guest_interface_glue.rs  lib.rs  sandbox.rs  sandbox_run_options.rs
src/hyperlight_host/src/capi/: api.rs  api_funcs.rs  bool.rs  byte_array.rs  c_func.rs  callback.rs  context.rs  err.rs  exports.rs  function_call_result.rs  guest_error.rs  guest_interface_glue.rs  guest_log_data.rs  guest_mem.rs  guest_mem_snapshot.rs  handle.rs  handle_status.rs  hdl.rs  host_function_call.rs  hyperv_linux.rs  int.rs  kvm.rs  mem_access_handler.rs  mem_cfg.rs  mem_config.rs  mem_layout.rs  mem_mgr.rs  mod.rs  outb_handler.rs  pe.rs  sandbox.rs  sandbox_compat.rs  shared_mem.rs  shared_mem_snapshot.rs  strings.rs  val_ref.rs
src/hyperlight_host/src/flatbuffers/: mod.rs
src/hyperlight_host/src/func/: args.rs  call_ctx.rs  def.rs  exports.rs  function_call.rs  function_types.rs  guest_dispatch.rs  guest_err.rs  host_functions.rs  mod.rs  param_type.rs  ret_type.rs  types.rs
src/hyperlight_host/src/guest/: function_call.rs  function_call_result.rs  function_types.rs  guest_error.rs  guest_function_call.rs  guest_function_definition.rs  guest_function_details.rs  guest_log_data.rs  host_function_call.rs  host_function_definition.rs  host_function_details.rs  mod.rs
src/hyperlight_host/src/hyperlight_surrogate/: Cargo.toml  Cargo.toml_temp_name
src/hyperlight_host/src/hypervisor/: fpu.rs  handlers.rs  hyperv_linux.rs  hyperv_linux_mem.rs  hyperv_windows.rs  inprocess.rs  (+11 more)
src/hyperlight_host/tests/: integration_test.rs  sandbox_host_tests.rs
src/hyperlight_host/tests_capi/: README.md  byte_array_tests.c  byte_array_tests.h  callback.c  callback.h  context_tests.c  context_tests.h  err.c  err.h  guest_func_tests.c  guest_func_tests.h  guest_mem.c  guest_mem.h  host_exception.c  host_exception.h  host_func_tests.c  host_func_tests.h  hyperv_linux.c  hyperv_linux.h  hypervisor.c  hypervisor.h  int.c  int.h  kvm.c  kvm.h  main.c  mem.c  mem_access_handler.c  mem_config.c  mem_config.h  mem_layout.c  mem_layout.h  mem_mgr_tests.c  mem_mgr_tests.h  outb_handler.c  outb_handler.h  pe_tests.c  pe_tests.h  sandbox_tests.c  sandbox_tests.h  (+8 more)
src/hyperlight_host/valgrind_suppressions/: hyperv_linux.supp  minimal.supp
(+353 files in other folders)
