[workspace]
resolver = "2"
default-members = [
    "src/hyperlight_capi",
    "src/hyperlight_common",
    "src/hyperlight_host",
    "src/hyperlight_testing",
    "src/HyperlightGuest",
]
members = [
    "src/hyperlight_capi",
    "src/hyperlight_guest",
    "src/hyperlight_host",
    "src/hyperlight_testing",
    "src/hyperlight_host/fuzz",
    "src/HyperlightGuest",
]
# Because hyperlight_guest has custom linker flags,
# we exclude it from the default-members list
# to avoid cargo test failing on it.
# Same for the simpleguest and dummyguest tests below.
exclude = [
    "src/tests/rust_guests/callbackguest",
    "src/tests/rust_guests/dummyguest",
    "src/tests/rust_guests/simpleguest",
]

[workspace.dependencies]
mshv-bindings = { version = "=0.1.2-20240416", registry = "hyperlight_redist" }
mshv-ioctls = { version = "=0.1.2-20240416", registry = "hyperlight_redist" }


# this will generate symbols for release builds
# so is handy for debugging issues in release builds
# to use, run `cargo build --profile=release-with-debug`
[profile.release-with-debug]
inherits = "release"
debug = true
