[package]
name = "hyperlight_guestlib_c_includes"
version = "0.7.7"
edition = "2021"

[lints]
workspace = true

[dependencies]
rust-embed = { version = "8.3.0", features = ["debug-embed", "include-exclude", "interpolate-folder-path"] }

[lib]
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
