[package]
name = "hyperlight_capi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]         
panic = 'abort'         # Always abort, this is mainly to ensure that panics cannot unwind across FFI boundaries.

[lib]
# https://docs.rust-embedded.org/book/interoperability/rust-with-c.html
name = "hyperlight_capi"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.72" }
cfg-if = { version = "1.0.0" }
flatbuffers = "23.5.26"
hyperlight_host = { path = "../hyperlight_host", version = "*", registry = "hyperlight_packages" }
libc = { version = "0.2.148" }
rand = { version = "0.8.5" }
hyperlight_testing = { path = "../hyperlight_testing", version = "*", registry = "hyperlight_packages" }
tracing = { version ="0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
uuid =  { version ="1.4.1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
mshv-bindings = { version = "0.1.1", registry = "hyperlight_redist" }

[build-dependencies]
anyhow = { version = "1.0.72" }
cbindgen = { version = "0.26.0" }

[dev-dependencies]
hyperlight_host = { path = "../hyperlight_host" }
hyperlight_testing = { path = "../hyperlight_testing" }
