[package]
name = "hyperlight_common"
version = "0.7.7"
edition = "2021"

[dependencies]
flatbuffers = { version = "23.5.26", default-features = false }
anyhow = { version = "1.0.72", default-features = false }
log = "0.4.20"
tracing = { version = "0.1.27", optional = true }
strum = {version = "0.25",  default-features = false, features = ["derive"]}
strum_macros = {version = "0.25", features =[]}

[features]
default = ["tracing"]

[dev-dependencies]
hyperlight_testing = { path = "../hyperlight_testing" }

[lib]
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
