[package]
name = "hyperlight_flatbuffers"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbuffers = { version = "23.5.26", default-features = false }
anyhow = { version = "1.0.72", default-features = false }
log = "0.4.20"

[dev-dependencies]
hyperlight_testing = { path = "../hyperlight_testing" }