[package]
name = "hyperlight_guest"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbuffers = { version = "23.5.26", default-features = false }
buddy_system_allocator = "0.9.0"
hyperlight_flatbuffers = { path = "../hyperlight_flatbuffers", version = "0.3.9", default-features = false, registry = "hyperlight_packages"}