[package]
name = "hyperlight_guest"
version = "0.8.0"
edition = "2021"

[features]
default = ["libc", "printf", "alloca"]
libc = [] # compile musl libc
printf = [] # compile printf
alloca = [] # compile alloca wrapper

[dependencies]
flatbuffers = { version = "23.5.26", default-features = false }
buddy_system_allocator = "0.9.0"
hyperlight_common = { path = "../hyperlight_common", default-features = false, version = "0.8.0", registry = "hyperlight_packages" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
log = { version = "0.4", default-features = false }

[build-dependencies]
cc = "1.0"
cfg-if = "1.0"
