[package]
name = "hyperlight_host"
version = "0.1.0"
edition = "2021"

[lib]
# https://docs.rust-embedded.org/book/interoperability/rust-with-c.html
name = "hyperlight_host"
# crate-type = ["staticlib"]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = { version = "0.2.2" }
goblin = { version = "0.7.1" }
anyhow = { version = "1.0.71" }
byteorder = { version = "1.4.3" }
rand = { version = "0.8.5" }
cfg-if = { version = "1.0.0" }
libc = { version = "0.2.147" }
paste = "1.0"
quote = "1.0"
scroll = { version = "0.11", default_features = false }
readonly = { version = "0.2" }
flatbuffers = "23.5.26"
page_size = "0.5.0"
termcolor = "1.2.0"
is-terminal = "0.4.9"
bitflags = "2.3.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.19"
once_cell = { version = "1.18.0" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
mshv-bindings = {git = "https://github.com/rust-vmm/mshv", rev="52edcf4" }
mshv-ioctls  = {git = "https://github.com/rust-vmm/mshv", rev="52edcf4"}
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.14.0"
vmm-sys-util = "0.11.1"

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }
more-asserts = { version = "0.3.1" }
envy = { version = "0.4.2" }
serde = { version = "1.0", features = ["derive"] }
proptest = "1.2.0"
hex-literal = "0.4.1"
tempfile = "3.6.0"
crossbeam-queue  = "0.3.8"

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.48.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(unix)'.dev-dependencies]
proc-maps="0.3.1"

[build-dependencies]
cbindgen = { version = "0.24.5" }
anyhow = { version = "1.0.71" }
