[package]
name = "hyperlight_host"
version = "0.1.0"
edition = "2021"

[lib]
# https://docs.rust-embedded.org/book/interoperability/rust-with-c.html
name = "hyperlight_host"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = { version = "0.7.1" }
anyhow = { version = "1.0.75" }
byteorder = { version = "1.4.3" }
rand = { version = "0.8.5" }
cfg-if = { version = "1.0.0" }
libc = { version = "0.2.147" }
hex-literal = "0.4.1"
paste = "1.0"
scroll = { version = "0.11", default_features = false }
readonly = { version = "0.2" }
flatbuffers = "23.5.26"
page_size = "0.6.0"
termcolor = "1.2.0"
is-terminal = "0.4.9"
bitflags = "2.4.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
once_cell = { version = "1.18.0" }
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-core = "0.1.31"
uuid = { version = "1.4.1", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
hyperlight_testing = { path = "../hyperlight_testing"}
rust-embed = { version = "8.0.0", features = ["debug-embed", "include-exclude", "interpolate-folder-path"] }
sha256 = "1.4.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Hypervisor",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
] }
crossbeam-channel = "0.5.8"

[target.'cfg(unix)'.dependencies]
mshv-bindings = { git = "https://github.com/rust-vmm/mshv", rev = "52edcf4" }
mshv-ioctls = { git = "https://github.com/rust-vmm/mshv", rev = "52edcf4" }
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.15.0"
vmm-sys-util = "0.11.1"

[dev-dependencies]
envy = { version = "0.4.2" }
serde = "1.0"
proptest = "1.2.0"
hex-literal = "0.4.1"
tempfile = "3.8.0"
crossbeam-queue = "0.3.8"
tracing-serde = "0.1.3"
tracing-log = "0.1.3"
serial_test = "2.0.0"
hyperlight_testing = { path = "../hyperlight_testing"}

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.48.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(unix)'.dev-dependencies]
proc-maps = "0.3.1"

[build-dependencies]
cbindgen = { version = "0.25.0" }
anyhow = { version = "1.0.75" }
